# Pufferfish-V2

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README  TODO.txt  attack_patterns_visualization.txt  bishop_magic_structs.txt  board.c  board.h  config.yml  knight_attacks_lookup.txt  main.c  moves.c  moves.h  pawn_attacks_lookup.txt  perft.c  rook_magic_structs.txt  test_commands.txt
engineVersions/: rankings_2.txt
include/: attack_patterns.h  board.h  eval.h  moves.h  perft.h  searching.h
lichess/lichess-bot-master/: config.yml.default
src/: attack_patterns.c  board.c  eval.c  main.c  moves.c  perft.c  searching.c
tests/: test_board.cpp
